# release-please-simple

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/release-please/: config.json
.github/workflows/: release.yaml  test.yaml
crates/core-test-2/: Cargo.toml
crates/rp-simple-1/: Cargo.toml
crates/rp-simple-2/: Cargo.toml
crates/rp-simple-3/: Cargo.toml
crates/rp-simple-3/src/: lib.rs
