[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
core-test-1 = { version = "0.1.0", path = "crates/core-test-1" }

[workspace.package]
version = "0.1.1" # x-release-please-version
authors = [
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
description = "Test release-please simple."
license = "MIT OR Apache-2.0"
edition = "2021"
