[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
rp-simple-3 = { version = "0.1.7", path = "crates/rp-simple-3" }

[workspace.package]
version = "0.1.8" # x-release-please-version
authors = [
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
description = "Test release-please simple."
license = "MIT OR Apache-2.0"
edition = "2021"
